Add agent and main, general base for horizon

--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,1 +1,2 @@
-main-class = "io.canvasmc.horizon.Main"
+main-class = io.canvasmc.horizon.Main
+instrumentation = io.canvasmc.horizon.instrument.JvmAgent
