--- a/core/src/main/resources/tinylog.properties
+++ b/core/src/main/resources/tinylog.properties
@@ -1,15 +1,13 @@
 # console logger
-writer              = console
-writer.level        = info
-writer.format       = [{date: HH:mm:ss}] [{level}]: {message}
-
+writer=console
+writer.level=info
+writer.format=[{date: HH:mm:ss}] [{level}]: {message}
 # file writer
-writer2             = file
-writer2.level       = debug
-writer2.file        = horizon-latest.log
-writer2.append      = false
-writer2.buffered    = true
-writer2.buffer_size = 32KB
-writer2.format      = [{date: HH:mm:ss}] [{level}] [{thread}]: {message}
-
-writingthread       = true
+writer2=file
+writer2.level=trace
+writer2.file=horizon-latest.log
+writer2.append=false
+writer2.buffered=true
+writer2.buffer_size=32KB
+writer2.format=[{date: HH:mm:ss}] [{level}] [{thread}]: {message}
+writingthread=true
