Rewrite access transformer implementation to match Paper/Forge

--- a/core/src/main/resources/tinylog.properties
+++ b/core/src/main/resources/tinylog.properties
@@ -4,7 +4,7 @@ writer.level=info
 writer.format=[{date: HH:mm:ss}] [{level}]: {message}
 # file writer
 writer2=file
-writer2.level=trace
+writer2.level=debug
 writer2.file=horizon-latest.log
 writer2.append=false
 writer2.buffered=true
