Add horizon datapack repository source

--- a/core/src/main/resources/tinylog.properties
+++ b/core/src/main/resources/tinylog.properties
@@ -9,5 +9,5 @@ writer2.file=horizon-latest.log
 writer2.append=false
 writer2.buffered=true
 writer2.buffer_size=32KB
-writer2.format=[{date: HH:mm:ss}] [{level}] [{thread}]: {message}
+writer2.format=[{date: HH:mm:ss}] [{level}] [{thread}/{tag}]: {message}
 writingthread=true
