chore: some build updates

--- a/kotlin-plugin/gradle.properties
+++ b/kotlin-plugin/gradle.properties
@@ -1,3 +1,7 @@
-version = 1.0.0
 group = io.canvasmc
+version = 1.0.0
 jstVersion = 1.0.68+canvas.2-SNAPSHOT
+
+org.gradle.configuration-cache = true
+org.gradle.caching = true
+org.gradle.parallel = true
