--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-group=io.canvasmc.horizon
-version=0.1.0
+group = io.canvasmc.horizon
+version = 0.1.0
 
-org.gradle.configuration-cache=true
-org.gradle.caching=true
-org.gradle.parallel=true
+org.gradle.configuration-cache = true
+org.gradle.caching = true
+org.gradle.parallel = true
