--- a/kotlin-plugin/gradle.properties
+++ b/kotlin-plugin/gradle.properties
@@ -1,5 +1,5 @@
 group = io.canvasmc
-version = 1.0.0
+version = 1.0.0-SNAPSHOT
 jstVersion = 1.0.68+canvas.2-SNAPSHOT
 
 org.gradle.configuration-cache = true
