chore: minor build changes

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ mixin = "0.17.0+mixin.0.8.7"
 mixin-extras = "0.5.0"
 asm = "9.9.1"
 paper-dev-bundle = "1.21.11-R0.1-SNAPSHOT"
-userdev = "2.3.12-SNAPSHOT"
+userdev = "2.3.12"
 jspecify = "1.0.0"
 junit = "6.0.0"
 java = "21"
