chore: switch to paper's jst and use our utils wherever possible

--- a/kotlin-plugin/gradle.properties
+++ b/kotlin-plugin/gradle.properties
@@ -1,6 +1,6 @@
 group = io.canvasmc
-version = 1.0.0-beta.1
-jstVersion = 1.0.68+canvas.2-SNAPSHOT
+version = 1.0.0-beta.2
+jstVersion = 1.0.68+paper.2-SNAPSHOT
 
 org.gradle.configuration-cache = true
 org.gradle.caching = true
