--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group = io.canvasmc.horizon
-version = 0.1.0
+version = 1.0.0-beta
 
 org.gradle.configuration-cache = true
 org.gradle.caching = true
