fix(core): version the maven artifact properly too

--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,2 +1,3 @@
-main-class=io.canvasmc.horizon.Main
-instrumentation=io.canvasmc.horizon.instrument.JvmAgent
+version = 1.0.0-beta
+mainClass = io.canvasmc.horizon.Main
+instrumentation = io.canvasmc.horizon.instrument.JvmAgent
