--- a/test-plugin/src/main/resources/paper-plugin.yml
+++ b/test-plugin/src/main/resources/paper-plugin.yml
@@ -11,8 +11,7 @@ horizon:
   service:
     entrypoint:
       # Note this is a list, not a map
-      - hi: "hi"
-      - test: "a"
+      - server_main: "io.canvasmc.testplugin.ServerMain"
     transform_service:
       - "io.canvasmc.testplugin.TransformerTest"
 api-version: "1.21.10"
