--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,3 +1,3 @@
 version = 1.0.0-beta
 mainClass = io.canvasmc.horizon.HorizonLoader
-instrumentation = io.canvasmc.horizon.instrument.JvmAgent
+instrumentation = io.canvasmc.horizon.instrument.JavaInstrumentationImpl
