--- a/gradle-plugin/gradle.properties
+++ b/gradle-plugin/gradle.properties
@@ -1,6 +1,6 @@
 group = io.canvasmc
-version = 1.0.0-beta.11
-jstVersion = 1.0.68+paper.2-SNAPSHOT
+version = 1.0.0-beta.12
+jstVersion = 2.0.7
 
 org.gradle.configuration-cache = true
 org.gradle.caching = true
