--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,3 +1,3 @@
-version = 1.0.0-beta
+version = 1.0.0-rc1
 mainClass = io.canvasmc.horizon.HorizonLoader
 instrumentation = io.canvasmc.horizon.instrument.JavaInstrumentationImpl
